MJ 26/03/05
- Added boolean support to configuration (only constants so far).
  Similar in function to "contains", take care. In the future we might add
  boolean expressions, this is why it was added now.
- Added FastUndirGraph, which is faster in most cases than ConstUndirGraph but
  uses a huge amount of memory.
- Refactored the graph observers so that they all extend GraphObserver
  (check classdocs), that takes care of (among other things) hugely improving
  performance when many graph observers are run together (pre-processing of
  the overlay is done only once). As a result, some old config files change
  their semantics: now for all observers, directed graph is the default, and
  "undir" must be specified for an undirected version.

MJ 24/03/05
- Fixed a memory leak. It was present when simulating churn with
  Linkable protocols. Now Linkables have to implement an "onKill"
  method that is called when the hosting node gets removed from the
  network. It should release links to other nodes. This prevents the
  creation of large trees of unused objects with a root being referenced by a
  live object.

MJ 11/03/2005
- BallExpansion is revised and now accepts parameter "stats".
- IncrementalStats is extended with a new method to add an item k times.

MJ 03/03/2005
- GraphPrinter is extended with a new format and the possibility to save the
  undirected version of the overlay. See class docs.

MJ 02/03/2005
- DegreeStats is extended by new options, to collect statistics about
  dead links. See class documentation.

MJ (adding changes by Spyros Voulgaris) 16/02/2005
- DegreeStats now uses the (now correct) degree method instead of the size
  of the returned neighbor list.

MJ (adding changes by Spyros Voulgaris) 15/02/2005
- OverlayNetwork had bugs: degree and getNeighbours did not conform
  to the contract that only those links count for which both ends
  are up. Fixed that. this means, degree(i) will return the number of